tests/negative/test_expr_addrof_non_ref.orb
fnc main() () {
    let (x:i32 1);
    & (+ x 1);
};